--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "whiskey-grader",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -15,7 +16,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-table": "^7.6.3",
     "react_ujs": "^2.6.1",
+    "styled-components": "^5.2.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
