--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-select": "^3.2.0",
     "react-table": "^7.6.3",
     "react_ujs": "^2.6.1",
     "styled-components": "^5.2.1",
